--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 
 
-<div class="accordion accordion-flush" id="accordionExample">
+<div class="accordion accordion-flush container" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
